# notas-musicais-rafael-rodrigo

./: mkdocs.yml  pyproject.toml
docs/: index.md
notas_musicais_rafael_rodrigo/: __init__.py  escalas.py
tests/: test_escalas.py
